Bug 370589. Put the prescontext into bidi mode when XUL trees detect a bidi string. r=smontagu,sr=dbaron